--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,6 +14,11 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "compilerOptions": {
+      "types": [
+        "hammerjs"
+      ]
+    }
   }
 }
